# autoux

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.py
autoux/: actors.py  autoux.py  human_readable_dump.py  key_map.py  keyboard.py  mouse.py  observers.py  record_episode.py  replay_episode.py  screen.py  utils.py
autoux/tools/: human_readable_dump.py  record_episode.py  replay_episode.py
autoux/utils/: actors.py  key_map.py
tests/: test_keyboard.py  test_mouse.py  test_screen.py
