[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autoux"
version = "0.0.0"
requires-python = ">=3.8"
dependencies = [
    "torch",
    "torchvision",
    "numpy",
    "tomlkit",
    "pynput"
]

[project.optional-dependencies]
dev = [
    "matplotlib",
    "tqdm",
    "streamlit"
]


[project.scripts]
autoux = "autoux.autoux:main"
