[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autoux"
version = "0.0.0"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pillow",
    "pynput",
    "mss",
]

[project.optional-dependencies]
dev = []


[project.scripts]
autoux = "autoux.autoux:main"