[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "autoux"
version = "0.0.0"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pillow",
    "pynput",
    "mss",
    "mcap",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.12.0"]


[project.scripts]
autoux = "autoux.autoux:main"
record-episode = "autoux.record_episode:main"

[tool.ruff]
# Same as Black.
line-length = 100
indent-width = 4

# Assume Python 3.8+
target-version = "py38"

[tool.ruff.lint]
# Enable these rule families
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]

# Ignore specific rules
ignore = [
    "SIM115",  # Context manager for files (record_episode.py needs specific handling)
    "E722",    # Bare except (record_episode.py has valid use case)
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"